<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/mvdeca_logo"/>

    <TextView
        android:id="@+id/textView_logoText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/mvdecaLogoText"
        android:textColor="#000000"
        android:textSize="25sp"
        android:gravity="center_horizontal">

    </TextView>

    <TextView
        android:id="@+id/textView_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_logoText"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/textView_askForPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_forgotPassword"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/ask_officer_password"
        android:textColor="#343A40"
        android:textSize="25sp">

    </TextView>

    <Button
        android:id="@+id/button_back"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_askForPassword"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/back"
        android:textColor="#000000"
        app:backgroundTint="#ebebeb"
        android:textSize="15sp"
        android:onClick="backOnClick">

    </Button>

</RelativeLayout>