<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".MainPageActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/mvdeca_logo"/>

    <TextView
        android:id="@+id/textView_logoText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/mvdecaLogoText"
        android:textColor="#000000"
        android:textSize="25sp"
        android:gravity="center_horizontal">

    </TextView>

    <LinearLayout
        android:id="@+id/relativeLayout_signInLayout"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_logoText"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_tryNewQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_new_questions"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:onClick="tryNewQuestionsOnClick">

        </Button>

        <Button
            android:id="@+id/button_reviewMissedQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_missed_questions"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:onClick="reviewMissedQuestionsOnClick">

        </Button>

        <Button
            android:id="@+id/button_showMissedQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_missed_questions_in_a_list"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb">

        </Button>

    </LinearLayout>

</RelativeLayout>