<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseTestTypeActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/mvdeca_logo"/>

    <TextView
        android:id="@+id/textView_logoText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/mvdecaLogoText"
        android:textColor="#000000"
        android:textSize="25sp"
        android:gravity="center_horizontal">
    </TextView>

    <RelativeLayout
        android:id="@+id/relativeLayout_chooseTestTypeLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_logoText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView_chooseTestType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_test_type"
            android:textColor="#000000"
            android:textSize="25sp">
        </TextView>

        <Button
            android:id="@+id/button_back"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/back"
            android:textColor="#000000"
            app:backgroundTint="#ebebeb"
            android:textSize="15sp"
            android:onClick="backOnClick">

        </Button>

        <ListView
            android:id="@+id/listView_testType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_back"
            android:layout_below="@+id/textView_chooseTestType"
            android:textSize="16sp">

        </ListView>



    </RelativeLayout>


</RelativeLayout>